--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name" translatable="false">Cofi</string>
+    <string name="list_header" translatable="false">Cofi</string>
     <string name="step_type_add_coffee">Add coffee</string>
     <string name="step_type_water">Add water</string>
     <string name="step_type_wait">Wait</string>
