--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,7 +12,7 @@
     <string name="recipe_unsaved_title">You have unsaved changes</string>
     <string name="recipe_unsaved_text">Do you want to discard them?</string>
     <string name="recipe_delete_title">Are you sure?</string>
-    <string name="recpie_delete_text">This will remove this recipe permanently</string>
+    <string name="recipe_delete_text">This will remove this recipe permanently</string>
     <string name="recipe_edit_name">Name</string>
     <string name="recipe_edit_description">Description</string>
     <string name="recipe_edit_title">Edit recipe</string>
@@ -80,12 +80,12 @@ Temperature: For light roast – brought to a boil and used immediately. For dar
     <string name="tereszkiewicz_credits_subtitle">Check out his Dribbble</string>
     <string name="recipe_create_title">Add recipe</string>
     <string name="recipe_clone_title">Clone this recipe?</string>
-    <string name="recpie_clone_text">This will create a duplicate of this recipe</string>
-    <string name="recpie_clone_suffix">%1$s - Copy</string>
+    <string name="recipe_clone_text">This will create a duplicate of this recipe</string>
+    <string name="recipe_clone_suffix">%1$s - Copy</string>
     <string name="app_version">App version</string>
-    <string name="recipe_details_noTime">Press start to conitinue</string>
+    <string name="recipe_details_noTime">Press start to continue</string>
     <string name="step_add_duration_explainer">Step duration determines how long an action will take (in seconds). If you want to create a step that will hold whole recipe till you are read, just leave it empty.</string>
     <string name="settings_backup">Backup</string>
     <string name="settings_restore">Restore</string>
-    <string name="settings_addDefault">Add default reciepies</string>
+    <string name="settings_addDefault">Add default recipes</string>
 </resources>
