--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -44,7 +44,9 @@
     <string name="step_add_remove">Kaldır</string>
     <string name="timer_enjoy">Kahvenizin keyfini çıkarın</string>
     <string name="prepopulate_v60_name">Ultimate V60</string>
-    <string name="prepopulate_v60_description">Tarifi oluşturan: James Hoffmann Kaynak: https://youtu.be/AI4ynXzkSQo Öğütme boyutu: orta Sıcaklık: daha sıcak daha iyi</string>
+    <string name="prepopulate_v60_description">Tarifi oluşturan: James Hoffmann Kaynak: https://youtu.be/AI4ynXzkSQo
+Öğütme boyutu: orta
+Sıcaklık: daha sıcak daha iyi</string>
     <string name="prepopulate_step_coffee">Kahve ekle</string>
     <string name="prepopulate_step_water">Su ekle</string>
     <string name="prepopulate_step_swirl">Karıştır</string>
@@ -53,15 +55,20 @@
     <string name="prepopulate_step_stir_crust">Tortuyu karıştır</string>
     <string name="prepopulate_step_scoop_coffee">Üstteki köpük ve kahve parçalarını alın</string>
     <string name="prepopulate_frenchPress_name">Fransız Baskısı (French Press)</string>
-    <string name="prepopulate_frenchPress_description">Tarifi oluşturan: James- Hoffman Kaynak: https://youtu.be/st571DYYTR8 Öğütme boyutu: orta Son adımın 5 dakikasından sonra dökebilirsiniz ancak ne kadar beklerseniz o kadar iyi olur</string>
+    <string name="prepopulate_frenchPress_description">Tarifi oluşturan: James- Hoffman Kaynak: https://youtu.be/st571DYYTR8
+Öğütme boyutu: orta
+Son adımın 5 dakikasından sonra dökebilirsiniz ancak ne kadar beklerseniz o kadar iyi olur</string>
     <string name="hoffmann_credits_title">Varsayılan tarifler James Hoffman tarafından</string>
     <string name="hoffmann_credits_subtitle">Onun YouTube kanalına git</string>
     <string name="prepopulate_chemex_name">Chemex</string>
-    <string name="prepopulate_chemex_description">Tarifi oluşturan: James Hoffmann Kaynak: https://youtu.be/ikt-X5x7yoc Öğütme boyutu: orta Sıcaklık: ne kadar sıcak o kadar iyi olur</string>
+    <string name="prepopulate_chemex_description">Tarifi oluşturan: James Hoffmann Kaynak: https://youtu.be/ikt-X5x7yoc
+Öğütme boyutu: orta
+Sıcaklık: ne kadar sıcak o kadar iyi olur</string>
     <string name="prepopulate_aero_name">AeroPress</string>
     <string name="prepopulate_aero_step_piston">Pistonu brewer\'ın 1cm içine koyun</string>
     <string name="prepopulate_aero_step_press">Pistonu yavaşça itin</string>
-    <string name="prepopulate_aero_description">Tarifi oluşturan: James Hoffmann Kaynak: https://youtu.be/j6VlT_jUVPc Öğütme boyutu: ortanın hafif üstü</string>
+    <string name="prepopulate_aero_description">Tarifi oluşturan: James Hoffmann Kaynak: https://youtu.be/j6VlT_jUVPc
+Öğütme boyutu: ortanın hafif üstü</string>
     <string name="tereszkiewicz_credits_title">Uygulama iconlarını yapan: Hubert Tereszkiewicz</string>
     <string name="tereszkiewicz_credits_subtitle">Onun Dribbble\'ına bak</string>
     <string name="recipe_create_title">Tarif ekle</string>
