--- a/cofi-share/src/main/res/values/strings.xml
+++ b/cofi-share/src/main/res/values/strings.xml
@@ -103,4 +103,6 @@ Temperature: For light roast – brought to a boil and used immediately. For dar
     <string name="settings_step_vibrate_item">Step change vibration</string>
     <string name="recipe_details_multiply_time">Time multiplier</string>
     <string name="recipe_details_multiply_weight">Weight multiplier</string>
+    <string name="infoBox_wearOS_title">Cofi is now on WearOS</string>
+    <string name="infoBox_wearOS_body">Download Cofi app for your WearOS watch!</string>
 </resources>
