Update sorting of icons, how icons are displayed and add long press tooltips on icons to see what they represent

--- a/cofi-share/src/main/res/values/strings.xml
+++ b/cofi-share/src/main/res/values/strings.xml
@@ -106,4 +106,12 @@ Temperature: For light roast – brought to a boil and used immediately. For dar
     <string name="infoBox_wearOS_title">Cofi is now on WearOS</string>
     <string name="infoBox_wearOS_body">Download Cofi app for your WearOS watch!</string>
     <string name="settings_sync_with_phone">Get settings from the phone</string>
+    <string name="name_grinder">Coffee grinder</string>
+    <string name="name_v60" translatable="false">V60</string>
+    <string name="name_vietnamese_press">Phin Filter</string>
+    <string name="name_mokapot" translatable="false">Moka Pot</string>
+    <string name="name_espresso">Espresso Machine</string>
+    <string name="name_cold_brew">Cold brew</string>
+    <string name="name_siphon">Siphon</string>
+    <string name="name_bripe" translatable="false">Bripe</string>
 </resources>
