--- a/cofi-share/src/main/res/values-pl/strings.xml
+++ b/cofi-share/src/main/res/values-pl/strings.xml
@@ -107,4 +107,9 @@ Temperatura: Dla jasno palonych - zaraz po zgotowaniu. Dla ciemno palonych – 8
     <string name="infoBox_wearOS_title">Cofi jest już na WearOS</string>
     <string name="infoBox_wearOS_body">Pobierz Cofi na swój zegarek!</string>
     <string name="settings_sync_with_phone">Synchronizuj ustawienia z telefonem</string>
+    <string name="name_grinder">Młynek do kawy</string>
+    <string name="name_vietnamese_press">Zaparzacz Phin</string>
+    <string name="name_espresso">Ekspres</string>
+    <string name="name_cold_brew">Cold brew</string>
+    <string name="name_siphon">Syfon</string>
 </resources>
