--- a/cofi-share/src/main/res/values-pl/strings.xml
+++ b/cofi-share/src/main/res/values-pl/strings.xml
@@ -117,4 +117,5 @@ Temperatura: Dla jasno palonych - zaraz po zgotowaniu. Dla ciemno palonych – 8
     <string name="support_dialog_github">Daj gwiazdkę na Githubie</string>
     <string name="support_dialog_mastodon">Śledź mnie na Mastodonie</string>
     <string name="support_dialog_kofi">Kup mi kawę</string>
+    <string name="support_dialog_review">Napisz opinię</string>
 </resources>
