--- a/cofi-share/src/main/res/values/strings.xml
+++ b/cofi-share/src/main/res/values/strings.xml
@@ -122,4 +122,5 @@ Temperature: For light roast – brought to a boil and used immediately. For dar
     <string name="support_dialog_mastodon">Follow me on Mastodon</string>
     <string name="support_dialog_kofi">Buy me a coffee</string>
     <string name="support_dialog_review">Write a review</string>
+    <string name="support_title">Support Cofi</string>
 </resources>
