--- a/cofi-share/src/main/res/values-pl/strings.xml
+++ b/cofi-share/src/main/res/values-pl/strings.xml
@@ -120,4 +120,6 @@ Temperatura: Dla jasno palonych - zaraz po zgotowaniu. Dla ciemno palonych – 8
     <string name="support_dialog_kofi">Kup mi kawę</string>
     <string name="support_dialog_review">Napisz opinię</string>
     <string name="support_title">Wesprzyj Cofi</string>
+    <string name="infoBox_update_title">Cofi zostało zaktualizowane</string>
+    <string name="infoBox_update_body">Kliknij żeby zobaczyć co się zmieniło</string>
 </resources>
