--- a/cofi-share/src/main/res/values/strings.xml
+++ b/cofi-share/src/main/res/values/strings.xml
@@ -125,4 +125,5 @@ Temperature: For light roast – brought to a boil and used immediately. For dar
     <string name="support_title">Support Cofi</string>
     <string name="infoBox_update_title">Cofi has been updated</string>
     <string name="infoBox_update_body">Click here to read what\'s new</string>
+    <string name="settings_step_next_step_item">Show next step</string>
 </resources>
