Add missing strings

--- a/cofi-share/src/main/res/values-de/strings.xml
+++ b/cofi-share/src/main/res/values-de/strings.xml
@@ -87,4 +87,28 @@ Achte darauf, dass sich die dreilagige Seite des Filters an der Abflussseite bef
     <string name="recipe_details_noTime">Drücke Start zum Fortfahren</string>
     <string name="button_show">Zeigen</string>
     <string name="recipe_edit_description_button">Beschreibung hinzufügen</string>
+    <string name="recipe_details_multiply_time">Zeitmultiplikator</string>
+    <string name="recipe_details_multiply_weight">Gewichtsmultiplikator</string>
+    <string name="infoBox_wearOS_title">Cofi ist jetzt auf WearOS verfügbar</string>
+    <string name="infoBox_wearOS_body">Laden Sie die Cofi-App für Ihre WearOS-Uhr herunter!</string>
+    <string name="settings_sync_with_phone">Einstellungen vom Telefon abrufen</string>
+    <string name="name_grinder">Kaffeemühle</string>
+    <string name="name_vietnamese_press">Phin-Filter</string>
+    <string name="name_espresso">Espressomaschine</string>
+    <string name="name_cold_brew">Cold Brew</string>
+    <string name="name_siphon">Siphon</string>
+    <string name="name_cezve">Cezve</string>
+    <string name="name_cup">Tasse</string>
+    <string name="support_dialog_title">Gefällt dir Cofi?</string>
+    <string name="support_dialog_body">Ich würde mich sehr über deine Unterstützung freuen! Du kannst mir helfen, weiterhin das zu tun, was ich liebe, indem du eine oder mehrere der folgenden Optionen auswählst:</string>
+    <string name="support_dialog_github">Cofi auf Github bewerten</string>
+    <string name="support_dialog_mastodon">Mir auf Mastodon folgen</string>
+    <string name="support_dialog_kofi">Mir einen Kaffee spendieren</string>
+    <string name="support_dialog_review">Eine Bewertung schreiben</string>
+    <string name="support_title">Cofi unterstützen</string>
+    <string name="infoBox_update_title">Cofi wurde aktualisiert</string>
+    <string name="infoBox_update_body">Klicke hier, um zu lesen, was neu ist</string>
+    <string name="settings_step_next_step_item">Nächsten Schritt anzeigen</string>
+    <string name="recipe_details_upNext">Als nächstes:</string>
+    <string name="settings_wearOS_item">Für WearOS herunterladen</string>
 </resources>
