--- a/cofi-share/src/main/res/values-pl/strings.xml
+++ b/cofi-share/src/main/res/values-pl/strings.xml
@@ -123,4 +123,6 @@ Temperatura: Dla jasno palonych - zaraz po zgotowaniu. Dla ciemno palonych – 8
     <string name="infoBox_update_title">Cofi zostało zaktualizowane</string>
     <string name="infoBox_update_body">Kliknij żeby zobaczyć co się zmieniło</string>
     <string name="settings_step_next_step_item">Pokazuj następny krok</string>
+    <string name="recipe_details_upNext">Następny krok:</string>
+    <string name="settings_wearOS_item">Pobierz na WearOS</string>
 </resources>
