--- a/cofi-share/src/main/res/values-pl/strings.xml
+++ b/cofi-share/src/main/res/values-pl/strings.xml
@@ -43,11 +43,13 @@ UWAGA: ten link nie służy do dzielenia się przepisem z innymi"</string>
         <item quantity="one">Zapisano %d przepis</item>
         <item quantity="few">Zapisano %d przepisy</item>
         <item quantity="many">Zapisano %d przepisów</item>
+        <item quantity="other">Zapisano %d przepisów</item>
     </plurals>
     <plurals name="settings_snackbar_restore">
         <item quantity="one">Przywrócono %d przepis</item>
         <item quantity="few">Przywrócono %d przepisy</item>
         <item quantity="many">Przywrócono %d przepisów</item>
+        <item quantity="other">Przywrócono %d przepisów</item>
     </plurals>
     <string name="prepopulate_v60_name">V60</string>
     <string name="prepopulate_v60_description">"Przepis od: James Hoffmann
