--- a/cofi-share/src/main/res/values-de/strings.xml
+++ b/cofi-share/src/main/res/values-de/strings.xml
@@ -17,7 +17,7 @@
     <string name="recipe_edit_title">Rezept bearbeiten</string>
     <string name="recipe_add_new_title">Neues Rezept erstellen</string>
     <string name="recipe_details_automation_dialog_title">Direktlink</string>
-    <string name="recipe_details_automation_dialog_text">Verwenden diesen Link, um direkt zu diesem Rezept zu gelangen. Speicher ihn auf einem NFC-Tag oder erstelle eine Automatisierungsaufgabe in Tasker. WARNUNG: Das Rezept kann auf diese Weise nicht geteilt werden!</string>
+    <string name="recipe_details_automation_dialog_text">Verwende diesen Link, um direkt zu diesem Rezept zu gelangen. Speicher ihn auf einem NFC-Tag oder erstelle eine Automatisierungsaufgabe in Tasker. WARNUNG: Das Rezept kann auf diese Weise nicht geteilt werden!</string>
     <string name="timer_progress_weight">%1$sg/%2$sg</string>
     <string name="timer_step_name_time">%1$s (%2$ss)</string>
     <string name="button_cancel">Abbrechen</string>
@@ -106,7 +106,7 @@ Achte darauf, dass sich die dreilagige Seite des Filters an der Abflussseite bef
     <string name="support_dialog_review">Eine Bewertung schreiben</string>
     <string name="support_title">Cofi unterstützen</string>
     <string name="infoBox_update_title">Cofi wurde aktualisiert</string>
-    <string name="infoBox_update_body">Klicke hier, um zu lesen, was neu ist</string>
+    <string name="infoBox_update_body">Zur Anzeige der Neuerungen hier klicken</string>
     <string name="settings_step_next_step_item">Nächsten Schritt anzeigen</string>
     <string name="recipe_details_upNext">Als nächstes:</string>
     <string name="settings_wearOS_item">Für WearOS herunterladen</string>
