--- a/cofi-share/src/main/res/values-de/strings.xml
+++ b/cofi-share/src/main/res/values-de/strings.xml
@@ -17,7 +17,7 @@
     <string name="recipe_edit_title">Rezept bearbeiten</string>
     <string name="recipe_add_new_title">Neues Rezept erstellen</string>
     <string name="recipe_details_automation_dialog_title">Direktlink</string>
-    <string name="recipe_details_automation_dialog_text">Verwende diesen Link, um direkt zu dieses Rezept aufzurufen. Speichere ihn auf einem NFC-Tag oder erstelle eine Automatisierungsaufgabe in Tasker. WARNUNG: Das Rezept kann auf diese Weise nicht geteilt werden!</string>
+    <string name="recipe_details_automation_dialog_text">Verwende diesen Link, um das Rezept direkt aufzurufen. Speichere ihn auf einem NFC-Tag oder erstelle eine Automatisierungsaufgabe in Tasker. WARNUNG: Das Rezept kann auf diese Weise nicht geteilt werden!</string>
     <string name="timer_progress_weight">%1$sg/%2$sg</string>
     <string name="timer_step_name_time">%1$s (%2$ss)</string>
     <string name="button_cancel">Abbrechen</string>
