--- a/cofi-share/src/main/res/values/strings.xml
+++ b/cofi-share/src/main/res/values/strings.xml
@@ -87,6 +87,17 @@ Temperature: the hotter, the better (especially with lighter roasts)"</string>
 \nSource: https://youtu.be/j6VlT_jUVPc
 \nGrind size: For light roast – finer end of medium. The darker you go the more you may prefer to increase the dose and coarsen the grind
 \nTemperature: For light roast – brought to a boil and used immediately. For dark roasts – 85–90℃</string>
+    <string name="prepopulate_clever_dripper_name">Clever Dripper</string>
+    <string name="prepopulate_clever_dripper_step_rinse">Rinse the filter with hot water</string>
+    <string name="prepopulate_clever_dripper_step_break_crust">Break crust by either stirring or giving it a little shake</string>
+    <string name="prepopulate_clever_dripper_step_draw_down">Place on top of cup and allow it to draw fully down</string>
+    <string name="prepopulate_clever_dripper_description">Recipe created by: James Hoffmann
+\nSource: https://youtu.be/RpOdennxP24
+\nGrind size: Medium-fine
+\nTemperature: Bring to a boil and use immediately
+\n Ratio: 1:16.67, or 15g to 250mL
+\nFold the filter along both seams to have it fit better inside the brewer
+\nMaximum amount of water is 500mL, but 400 or lower is recommended</string>
     <string name="tereszkiewicz_credits_title">App icon by: Hubert Tereszkiewicz</string>
     <string name="tereszkiewicz_credits_subtitle">Check out his Dribbble</string>
     <string name="recipe_create_title">Add recipe</string>
