--- a/cofi-share/src/main/res/values-zh/strings.xml
+++ b/cofi-share/src/main/res/values-zh/strings.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name" translatable="false">Cofi</string>
-    <string name="list_header" translatable="false">Cofi</string>
     <string name="step_type_add_coffee">添加咖啡</string>
     <string name="step_type_water">添加水</string>
     <string name="step_type_wait">等候</string>
@@ -106,13 +104,11 @@ Source: https://youtu.be/AI4ynXzkSQo
     <string name="infoBox_wearOS_body">为您的WearOS手表下载Cofi应用程序！</string>
     <string name="settings_sync_with_phone">从手机获取设置</string>
     <string name="name_grinder">咖啡研磨机</string>
-    <string name="name_v60" translatable="false">V60</string>
     <string name="name_vietnamese_press">Phin过滤器</string>
-    <string name="name_mokapot" translatable="false">摩卡壶</string>
+    <string name="name_mokapot">摩卡壶</string>
     <string name="name_espresso">蒸馏咖啡机</string>
     <string name="name_cold_brew">冷萃酝酿</string>
     <string name="name_siphon">虹吸壶</string>
-    <string name="name_bripe" translatable="false">Bripe咖啡冲泡管</string>
     <string name="name_cezve">Cezve咖啡壶</string>
     <string name="name_cup">杯</string>
     <string name="support_dialog_title">喜欢 Cofi?</string>
