--- a/cofi-share/src/main/res/values/strings.xml
+++ b/cofi-share/src/main/res/values/strings.xml
@@ -131,4 +131,5 @@ Temperature: the hotter, the better (especially with lighter roasts)"</string>
     <string name="settings_wearOS_item">Download for WearOS</string>
     <string name="recipe_details_change_step_toast">Press and hold to change step</string>
     <string name="recipe_details_read_description">Read description</string>
+    <string name="recipe_details_recipeRatio">Recipe ratio: 1:%1$s</string>
 </resources>
