--- a/cofi-share/src/main/res/values/strings.xml
+++ b/cofi-share/src/main/res/values/strings.xml
@@ -55,10 +55,16 @@
     <string name="step_add_remove">Remove</string>
     <string name="timer_enjoy">Enjoy your coffee</string>
     <string name="prepopulate_v60_name">Ultimate V60</string>
-    <string name="prepopulate_v60_description">"Recipe created by: James Hoffmann
-Source: https://youtu.be/AI4ynXzkSQo
-Grind size: medium fine
-Temperature: the hotter, the better (especially with lighter roasts)"</string>
+    <string name="prepopulate_v60_description">Recipe created by: James Hoffmann
+\nSource: https://youtu.be/AI4ynXzkSQo
+\nGrind size: medium fine
+\nTemperature: the hotter, the better (especially with lighter roasts)</string>
+    <string name="prepopulate_v60_1cup_name">1 Cup V60</string>
+    <string name="prepopulate_v60_1cup_description">Recipe created by: James Hoffmann
+\nSource: https://youtu.be/1oB1oDrDkHM
+\nBefore you start, heat up the V60 by placing the paper inside the cone and pouring hot water over the paper. This preheats the V60 and prepares the paper for the brewing process.
+\nGrind size: fine - medium fine
+\nTemperature: the hotter, the better (especially with lighter roasts)</string>
     <string name="prepopulate_step_coffee">Add coffee</string>
     <string name="prepopulate_step_water">Add water</string>
     <string name="prepopulate_step_swirl">Swirl</string>
